[package]
name = "solana-secp256k1-schnorr"
description = "Secp256k1 Schnorr signatures in SVM with lattice-based cryptography"
authors = ["Dean Little <@deanmlittle>"]
version = "0.3.0"
edition = "2021"
license = "MIT"

[features]
sign = []
bip340 = ["solana-nostd-sha256"]
keccak256 = ["solana-nostd-keccak"]
sha256 = ["solana-nostd-sha256"]
default = ["bip340", "keccak256", "sha256", "sign"]
lattice = ["pqcrypto", "pqcrypto-traits", "pqcrypto-dilithium"]

[lib]

[dependencies]
solana-nostd-secp256k1-recover = "0.1.1"
solana-secp256k1 = "0.1.5"
solana-nostd-sha256 = { version = "0.1.3", optional = true }
solana-nostd-keccak = { version = "0.1.3", optional = true }
pqcrypto = { version = "0.7.0", optional = true }
pqcrypto-traits = { version = "0.7.0", optional = true }
pqcrypto-dilithium = { version = "0.7.0", optional = true }

[dev-dependencies]
hex = "0.4.3"
